altering php version requirement

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "php": "7.3.*",
     "dashifen/exception": "1.1.*",
-    "ext-json": "*"
+    "ext-json": "*",
+    "php": ">=7.3"
   }
 }
