--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "php": "7.3.*",
+    "php": ">=7.3.*",
     "dashifen/exception": "1.1.*",
     "ext-json": "*"
   }
