--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "dashifen/exception": "^1",
+    "php": ">=7.4",
     "ext-json": "*",
-    "php": ">=7.3"
+    "dashifen/exception": "^1"
   }
 }
