--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "dashifen/repository",
-  "description": "An object with read-only protected properties from which other objects can be extened.",
-  "license": "WTFPL",
+  "description": "An object with read-only protected properties from which other objects can be extended.",
+  "license": "MIT",
   "type": "library",
   "authors": [
     {
@@ -17,8 +17,7 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "php": ">=7.4",
-    "ext-json": "*",
+    "php": ">=8.2",
     "dashifen/case-changing-trait": "^1",
     "dashifen/exception": "^1"
   }
